Fixed the horizontal Scroll in Mobile View

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -2,7 +2,7 @@
    /* Font Linking */ 
     /* Font Linking */
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
 * {
@@ -92,14 +92,14 @@ body, html {
 .welcome-content {
     width: 100%;
     display: flex;
-    /* align-items: center; */
+    align-items: center;
     justify-content: space-between;
     flex-direction: column;
     overflow: hidden;
 }
 
 .welcom-text h1 {
-    font-size: 5rem;
+    font-size: 4rem;
     text-align: center;
 }
 
@@ -376,7 +376,7 @@ body, html {
 
 .footer-l {
     /* width: 50%; */
-    margin-left: 60px;
+    /* margin-left: 60px; */
     display: flex;
     color: #e4e4e4;
     font-size: 1.1rem;
@@ -387,9 +387,8 @@ body, html {
 }
 
 .footer-design {
-    margin-left: 10%;
-    margin-top: 10%;
-    width: 40%;
+    padding: 40px 40px 0px 40px;
+    width: 100%;
 }
 
 .footer-design ul {
@@ -412,9 +411,8 @@ body, html {
 }
 
 .footer-about {
-    margin-left: 3%;
-    margin-top: 40px;
-    margin-bottom: 60px;
+    /* margin-left: 3%; */
+    padding: 40px;
     
 }
 
@@ -423,7 +421,7 @@ body, html {
 }
 
 .footer-about p {
-    margin-right: 35%;
+    /* margin-right: 35px; */
 
 }
 
